@@ -15,3 +15,9 @@ serve:
 
 clean:
 	rm -rf post page tag 404.html about.html archives.html feed.atom index.html tags.html 
+
+start:
+	ililac start
+
+stop:
+	ililac stop
