@@ -4,6 +4,7 @@ v0.3.9
 - update built-in theme `less`
 - add one more demo link
 - typofixed in documentation
+- update default config.toml(minor typofix)
 
 v0.3.8
 ------
